# tdma_timeslot_proto_sim

./: .gitignore  CMakeLists.txt
src/: main.c
src/com/: com_channel.c  com_channel.h  data_channel.c  data_channel.h  data_channel_config.c  data_channel_config.h
src/packet/: packet.h
src/timeslot/: timeslot.c  timeslot.h  timeslot_signal.c  timeslot_signal.h  timeslot_tb.c  timeslot_tb.h  tr_tb.c  tr_tb.h
src/util/: list.h
